Influencers > Facebook page : Male Female was not aligned in responsive design, Fixed it

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -672,7 +672,7 @@ a.center-block.text-center.user-status.small {
 
 @media (max-width: 398px) {
   .chart-male {
-    margin-right: 30px;
+    //margin-right: 30px;
   }
 }
 
@@ -780,7 +780,7 @@ th {
 
 .gender-stat-legend {
   display: inline-block;
-  margin-left: 18px;
+  margin-left: 16px;
 }
 
 .gender-stat-legend .dropdown {
